--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Cython==3.1.1
+Cython
 attr==0.3.2
 components==0.0.1a0
 ConfigParser==7.2.0
@@ -35,4 +35,3 @@ streamlit==1.45.0
 thread==2.0.5
 urllib3_secure_extra==0.1.0
 xmlrpclib==1.0.1
-Cython==3.0.11
