--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,4 @@
-Cython
-attr==0.3.2
-components==0.0.1a0
-ConfigParser==7.2.0
-cryptography==42.0.5
-
-dl==0.1.0
-docutils==0.18.1
-docutils==0.18.1
-filelock==3.18.0
-HTMLParser==0.0.2
-ipython==8.12.3
-ipywidgets==7.8.1
-
-keyring==24.3.1
-langchain==0.3.25
-langchain_community==0.3.24
-langchain_huggingface==0.2.0
-numpy==2.2.6
-openai==1.82.0
-openpyxl==3.1.2
-ordereddict==1.1
-pandas==2.2.3
-Pillow==11.2.1
-plotly==5.22.0
-protobuf==6.31.0
-
-pyOpenSSL==25.1.0
-PyPDF2==3.0.1
-pytesseract==0.3.13
-python_docx==1.1.2
-redis==6.1.0
-Sphinx==8.2.3
-streamlit==1.45.0
-thread==2.0.5
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+streamlit 
+openpyxl
+langchain_community
+langchain_huggingface
