--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-streamlit 
+
 openpyxl
 langchain_community
-langchain_huggingface
 faiss-cpu
 plotly
 openai
-python-docx>=0.8.11
 PyPDF2
 pytesseract
+
+streamlit>=1.28.0
+torch==1.13.1+cpu
+sentence-transformers==2.2.2
+langchain-huggingface==0.0.3
+transformers==4.21.3
+numpy==1.24.3
+pandas>=1.5.0
+python-docx>=0.8.11
