--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,19 @@ openai
 PyPDF2
 pytesseract
 
-streamlit
-torch==1.13.1+cpu
-sentence-transformers==2.2.2
-langchain-huggingface==0.0.3
-transformers==4.21.3
-numpy==1.24.3
-pandas>=1.5.0
+streamlit>=1.28.0
+openpyxl>=3.1.0
+langchain_community>=0.3.0
+faiss-cpu>=1.7.0
+plotly>=5.0.0
+openai>=1.0.0
+PyPDF2>=3.0.0
+pytesseract>=0.3.10
 python-docx>=0.8.11
+torch>=2.0.0
+sentence-transformers>=2.2.0
+langchain-huggingface>=0.0.3
+transformers>=4.21.0
+numpy>=1.21.0
+pandas>=1.5.0
+scikit-learn>=1.0.0
